[package]
name = "serde_schema_derive"
version = "0.0.1"
description = "serde support for self-describing, schema-based data formats"
readme = "../README.md"
authors = ["Sam Rijs <srijs@airpost.net>"]
license = "MIT/Apache-2.0"
workspace = ".."

[lib]
proc-macro = true

[dependencies]
quote = "0.5.2"
serde_derive_internals = "0.23.1"
syn = "0.13.0"

[dev-dependencies]
serde = "1.0.39"
serde_derive = "1.0.42"
serde_schema = { path = "../serde_schema" }
